--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Unbounded:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    Hello Web Browser !!!  
    <p> Name 
     <input>
     <button>Update</button>
-    <p> Hello world, and <strong> Mars</strong></p>
-   </p>
+    <p> Hello world, and <strong> Mars</strong> and <em>Venus</em> too</p>
+
+   
 </body>
 </html>
